[package]
name = "logtodiscord"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serenity]
features = ["framework", "standard_framework", "rustls_backend"]
version = "0.11.2"
[dependencies.tokio]
version = "1.19.2"
features = ["macros", "rt-multi-thread", "process"]
